main.tf
# Configure the AWS Provider
provider "aws" {
  region = var.region
   access_key = split("=", split("\n", file("${path.module}/awscreds.txt"))[0])[1]
   secret_key = split("=", split("\n", file("${path.module}/awscreds.txt"))[1])[1]
}

# Create a VPC
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
}

# Create public and private subnets
resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.public_subnet_1_cidr
  availability_zone = var.availability_zones[0]
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_1_cidr
  availability_zone = var.availability_zones[1]
}

# Create an Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

# Create a route table for the public subnet
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

# Associate the route table with the public subnet
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

# Create a security group for the web server
resource "aws_security_group" "web_server" {
  name        = "web_server_sg"
  description = "Allow HTTP/HTTPS traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress {
    description = "port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Generate a new SSH key pair
resource "tls_private_key" "example" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated" {
  key_name   = "my_key"
  public_key = tls_private_key.example.public_key_openssh
}

# Create a Compute Engine instance in the public subnet
resource "aws_instance" "web_server" {
  ami           = "ami-0075013580f6322a1"
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.web_server.id]
  key_name               = aws_key_pair.generated.key_name
  associate_public_ip_address = true

  # iam_instance_profile=aws_iam_instance_profile.ssm_profile.name


  # Install Nginx or Apache web server
 user_data = <<-EOF
    #!/bin/bash
    sudo apt-get update
    sudo apt-get install -y apache2
    sudo service apache2 start
    echo "Hello, World!" > /var/www/html/index.html
  EOF
}

# Create a CloudWatch metric alarm for CPU usage
resource "aws_cloudwatch_metric_alarm" "cpu_usage_alarm" {
  alarm_name          = "cpu-usage-alarm"
  comparison_operator = "GreaterThanThreshold"
  evaluation_periods  = 1
  metric_name         = "CPUUtilization"
  namespace           = "AWS/EC2"
  period              = 300
  statistic           = "Average"
  threshold           = 80
  unit               = "Percent"

  dimensions = {
    InstanceId = aws_instance.web_server.id
  }

  actions_enabled = true
  alarm_actions = [aws_sns_topic.cpu_usage_alarm_topic.arn]
}

# Create an SNS topic for the alarm
resource "aws_sns_topic" "cpu_usage_alarm_topic" {
  name = "cpu-usage-alarm-topic"
}

# Subscribe to the SNS topic to receive email notifications
resource "aws_sns_topic_subscription" "cpu_usage_alarm_subscription" {
  topic_arn = aws_sns_topic.cpu_usage_alarm_topic.arn
  protocol  = "email"
  endpoint  = "your_email_address@example.com"
}

# Output the public IP of the instance
output "instance_public_ip" {
  value = aws_instance.web_server.public_ip
}
